--- a/ST10466017-WEB DEV POE/about.html
+++ b/ST10466017-WEB DEV POE/about.html
@@ -1,55 +1,50 @@
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>BrightFutures — About</title>
-<link rel="stylesheet" href="css/style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>BrightFutures — About</title>
+  <meta name="description" content="BrightFutures history, mission and leadership details" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-<header class="site-header">
-<div class="container">
-<a class="logo" href="index.html">BrightFutures</a>
-<nav aria-label="Main navigation">
-<ul class="main-nav">
-<li><a href="index.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="projects.html">Projects</a></li>
-<li><a href="enquiry.html">Enquiry</a></li>
-<li><a href="contact.html">Contact</a></li>
-</ul>
-</nav>
-</div>
-</header>
+  <header class="site-header">
+    <div class="container">
+      <a class="logo" href="index.html">BrightFutures</a>
+      <nav aria-label="Main navigation">
+        <ul class="main-nav">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="enquiry.html">Enquiry</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
+  <main class="container">
+    <article>
+      <h1>About BrightFutures</h1>
+      <p>BrightFutures is a community organisation based in Cape Town focused on reducing food insecurity and improving educational outcomes for children.</p>
 
-<main class="container">
-<article>
-<h1>About BrightFutures</h1>
-<p>BrightFutures is a community organisation based in Cape Town focused on reducing food insecurity and improving educational outcomes for children. Our mission is to empower children with nourishment and knowledge, creating opportunities for long-term success.</p>
+      <h2>History</h2>
+      <p>Founded in 2019, we began as a volunteer-run food drive and have grown into multiple feeding and learning programmes.</p>
 
+      <h2>Mission & Vision</h2>
+      <p><strong>Mission:</strong> To provide nutritious meals and educational support to underprivileged children.</p>
+      <p><strong>Vision:</strong> A South Africa where no child goes to bed hungry and every young person has the opportunity to succeed.</p>
 
-<h2>History</h2>
-<p>Founded in 2019, BrightFutures started as a small volunteer-led food drive and has grown into several feeding schemes and after-school programmes across Cape Town.</p>
+      <h2>Leadership</h2>
+      <p>Our team is made up of educators, community organisers, and volunteers committed to impact and transparency.</p>
+    </article>
+  </main>
 
+  <footer class="site-footer container">
+    <p>&copy; <span id="year-2"></span> BrightFutures</p>
+  </footer>
 
-<h2>Mission & Vision</h2>
-<p><strong>Mission:</strong> To provide nutritious meals and educational support to underprivileged children.</p>
-<p><strong>Vision:</strong> A South Africa where no child goes to bed hungry and every young person has the opportunity to succeed.</p>
-
-
-<h2>Leadership</h2>
-<p>Our team comprises local community leaders, educators, and volunteers committed to transparent and impactful work.</p>
-</article>
-</main>
-
-
-<footer class="site-footer">
-<div class="container">
-<p>&copy; <span id="year-2"></span> BrightFutures. All rights reserved.</p>
-</div>
-</footer>
-
-
-<script src="js/script.js"></script>
+  <script src="js/validation.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
