--- a/ST10466017-WEB DEV POE/enquiry.html
+++ b/ST10466017-WEB DEV POE/enquiry.html
@@ -1,68 +1,70 @@
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>BrightFutures — Enquiry & Volunteer Sign-Up</title>
-<link rel="stylesheet" href="css/style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>BrightFutures — Enquiry</title>
+  <meta name="description" content="Volunteer sign-up and sponsorship enquiry form." />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-<header class="site-header">
-<div class="container">
-<a class="logo" href="index.html">BrightFutures</a>
-<nav aria-label="Main navigation">
-<ul class="main-nav">
-<li><a href="index.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="projects.html">Projects</a></li>
-<li><a href="enquiry.html">Enquiry</a></li>
-<li><a href="contact.html">Contact</a></li>
-</ul>
-</nav>
-</div>
-</header>
+  <header class="site-header">
+    <div class="container">
+      <a class="logo" href="index.html">BrightFutures</a>
+      <nav aria-label="Main navigation">
+        <ul class="main-nav">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="enquiry.html">Enquiry</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
+  <main class="container">
+    <h1>Enquiry & Volunteer Signup</h1>
+    <p>Use the form below to volunteer, sponsor meals or enquire about partnerships.</p>
 
-<main class="container">
-<h1>Volunteer or Sponsor</h1>
-<p>Fill out the form below to sign up as a volunteer, sponsor a meal, or enquire about partnerships.</p>
+    <form id="enquiry-form" action="#" novalidate>
+      <label for="ename">Full name *</label>
+      <input id="ename" name="name" type="text" required>
 
+      <label for="eemail">Email *</label>
+      <input id="eemail" name="email" type="email" required>
 
-<form id="enquiry-form" novalidate>
-<label for="name">Full name</label>
-<input id="name" name="name" type="text" required>
+      <label for="ephone">Phone</label>
+      <input id="ephone" name="phone" type="tel" placeholder="+27 82 123 4567" pattern="^\+?[0-9\s-]{7,15}$">
 
+      <label for="etype">Enquiry type *</label>
+      <select id="etype" name="type" required>
+        <option value="">-- select --</option>
+        <option value="volunteer">Volunteer</option>
+        <option value="sponsor">Sponsor a meal</option>
+        <option value="partnership">Partnership</option>
+      </select>
 
-<label for="email">Email</label>
-<input id="email" name="email" type="email" required>
+      <div id="sponsor-options" aria-hidden="true" hidden>
+        <label for="parcels">Number of food parcels (each R120)</label>
+        <input id="parcels" name="parcels" type="number" min="1" value="1">
+      </div>
 
+      <label for="emessage">Message *</label>
+      <textarea id="emessage" name="message" rows="5" required></textarea>
 
-<label for="phone">Phone (optional)</label>
-<input id="phone" name="phone" type="tel">
+      <button class="btn primary" type="submit">Submit enquiry</button>
+    </form>
 
+    <div id="enquiry-result" class="result" aria-live="polite"></div>
+  </main>
 
-<label for="type">Enquiry type</label>
-<select id="type" name="type">
-<option value="volunteer">Volunteer</option>
-<option value="sponsor">Sponsor a meal</option>
-<option value="partnership">Partnership</option>
-</select>
+  <footer class="site-footer container">
+    <p>&copy; <span id="year-4"></span> BrightFutures</p>
+  </footer>
 
-
-<label for="message">Message</label>
-<textarea id="message" name="message" rows="5" required></textarea>
-
-
-<button class="btn primary" type="submit">Submit enquiry</button>
-</form>
-
-
-<div id="form-status" aria-live="polite"></div>
-</main>
-
-
-<footer class="site-footer">
-<div class="container">
-<p>&copy; <span id="year-4"></span> BrightFutures. All rights reserved.</p>
-</div>
-</footer>
+  <script src="js/validation.js"></script>
+  <script src="js/dynamic.js"></script>
+  <script src="js/main.js"></script>
+</body>
 </html>
